# mangala-pygame

./: README.md  mangala.py  pyproject.toml
